add unit tests for effects, hotfix some errors that prevent you from running tests, fix effects, add new constructors