@@ -19,28 +19,64 @@ public class ArbitraryBasicTest {
 
     @Test
     public void testValidTransaction() {
-        ArbitraryBasic effect = new ArbitraryBasic(Arrays.asList(car));
+        ArbitraryBasic effect = new ArbitraryBasic(List.of(car));
 
-        List<Resource> input = Arrays.asList(bulb, bulb); // arbitrary
+        List<Resource> input = List.of(bulb, bulb);
         List<Resource> output = new ArrayList<>();
 
         boolean ok = effect.check(input, output, 0);
 
         assertTrue(ok);
-        assertEquals(1, output.size());
-        assertEquals(car, output.getFirst());
+    }
+
+    @Test
+    public void testWrongInput() {
+        ArbitraryBasic effect = new ArbitraryBasic(List.of(car));
+
+        List<Resource> output = new ArrayList<>();
+
+        boolean wrongIn = effect.check(List.of(), output, 0);
+
+        assertFalse(wrongIn);
+    }
+
+    @Test
+    public void testWrongOutput() {
+        ArbitraryBasic effect = new ArbitraryBasic(List.of(car));
+
+        List<Resource> input = List.of(bulb, bulb);
+
+        boolean wrongOut = effect.check(input, List.of(bulb, bulb, bulb), 0);
+
+        assertFalse(wrongOut);
+    }
+
+    @Test
+    public void testPolluted() {
+        ArbitraryBasic effect = new ArbitraryBasic(List.of(car));
+
+        List<Resource> output = new ArrayList<>();
+        List<Resource> input = List.of(bulb, bulb);
+
+        boolean polluted = effect.check(input, output, 1);
+
+        assertFalse(polluted);
     }
 
     @Test
     public void testStateFormat() {
-        ArbitraryBasic effect = new ArbitraryBasic(Arrays.asList(car));
+        ArbitraryBasic effect = new ArbitraryBasic(List.of(car));
+        ArbitraryBasic effect1 = new ArbitraryBasic(List.of(car, bulb, car));
 
         String s = effect.state();
-        assertEquals("[(any 1 resources) -> (Bulb)]", s);
+        assertEquals("[(any 1 resources) -> (Car)]", s);
+
+        String s1 = effect1.state();
+        assertEquals("[(any 1 resources) -> (Car Bulb Car )]", s1);
     }
 
     @Test
     public void testAssistanceFlag() {
-        assertFalse(new ArbitraryBasic(Arrays.asList(bulb)).hasAssistance());
+        assertFalse(new ArbitraryBasic(List.of(bulb)).hasAssistance());
     }
 }
